--- a/about.html
+++ b/about.html
@@ -546,6 +546,7 @@
                 <div class="story-text-enhanced fade-in">
                     <h2>
                         <span class="es-text">Nuestra Pasión por Japón</span>
+                        <span class="en-text">Our Passion for Japan</span>
                         <span class="ja-text">日本への情熱</span>
                     </h2>
                     <p>
@@ -584,6 +585,7 @@
                 <div class="section-header fade-in">
                     <h2 class="section-title">
                         <span class="es-text">Nuestros Valores</span>
+                        <span class="en-text">Our Values</span>
                         <span class="ja-text">私たちの価値観</span>
                     </h2>
                     <p class="section-description">
@@ -597,6 +599,7 @@
                         <span class="value-icon-modern"></span>
                         <h3>
                             <span class="es-text">Autenticidad</span>
+                            <span class="en-text">Authenticity</span>
                             <span class="ja-text">真正性</span>
                         </h3>
                         <p>
@@ -615,6 +618,7 @@
                         <span class="value-icon-modern"></span>
                         <h3>
                             <span class="es-text">Pasión</span>
+                            <span class="en-text">Passion</span>
                             <span class="ja-text">情熱</span>
                         </h3>
                         <p>
@@ -633,6 +637,7 @@
                         <span class="value-icon-modern"></span>
                         <h3>
                             <span class="es-text">Comunidad</span>
+                            <span class="en-text">Community</span>
                             <span class="ja-text">コミュニティ</span>
                         </h3>
                         <p>
@@ -651,6 +656,7 @@
                         <span class="value-icon-modern"></span>
                         <h3>
                             <span class="es-text">Excelencia</span>
+                            <span class="en-text">Excellence</span>
                             <span class="ja-text">卓越性</span>
                         </h3>
                         <p>
@@ -674,6 +680,7 @@
                 <div class="section-header fade-in">
                     <h2 class="section-title">
                         <span class="es-text">Nuestro Equipo</span>
+                        <span class="en-text">Our Team</span>
                         <span class="ja-text">私たちのチーム</span>
                     </h2>
                     <p class="section-description">
@@ -688,6 +695,7 @@
                         <h3>Carlos Yamamoto</h3>
                         <p class="team-role-modern">
                             <span class="es-text">Fundador & CEO</span>
+                            <span class="en-text">Founder & CEO</span>
                             <span class="ja-text">創設者・CEO</span>
                         </p>
                         <p>
@@ -707,6 +715,7 @@
                         <h3>Ana María López</h3>
                         <p class="team-role-modern">
                             <span class="es-text">Directora de Productos</span>
+                            <span class="en-text">Product Director</span>
                             <span class="ja-text">商品部長</span>
                         </p>
                         <p>
@@ -726,6 +735,7 @@
                         <h3>Roberto Tanaka</h3>
                         <p class="team-role-modern">
                             <span class="es-text">Director de Tecnología</span>
+                            <span class="en-text">Technology Director</span>
                             <span class="ja-text">技術部長</span>
                         </p>
                         <p>
@@ -751,6 +761,7 @@
                         <div class="stat-number-modern">500+</div>
                         <div class="stat-label-modern">
                             <span class="es-text">Productos Únicos</span>
+                            <span class="en-text">Unique Products</span>
                             <span class="ja-text">ユニークな商品</span>
                         </div>
                     </div>
@@ -758,6 +769,7 @@
                         <div class="stat-number-modern">10,000+</div>
                         <div class="stat-label-modern">
                             <span class="es-text">Clientes Satisfechos</span>
+                            <span class="en-text">Satisfied Customers</span>
                             <span class="ja-text">満足したお客様</span>
                         </div>
                     </div>
@@ -765,6 +777,7 @@
                         <div class="stat-number-modern">50+</div>
                         <div class="stat-label-modern">
                             <span class="es-text">Proveedores Japoneses</span>
+                            <span class="en-text">Japanese Suppliers</span>
                             <span class="ja-text">日本のサプライヤー</span>
                         </div>
                     </div>
@@ -772,6 +785,7 @@
                         <div class="stat-number-modern">4</div>
                         <div class="stat-label-modern">
                             <span class="es-text">Años de Experiencia</span>
+                            <span class="en-text">Years of Experience</span>
                             <span class="ja-text">年の経験</span>
                         </div>
                     </div>
@@ -784,6 +798,7 @@
             <div class="cta-content-modern fade-in">
                 <h2>
                     <span class="es-text">¿Listo para descubrir Japón?</span>
+                    <span class="en-text">Ready to discover Japan?</span>
                     <span class="ja-text">日本を発見する準備はできましたか？</span>
                 </h2>
                 <p>
@@ -799,6 +814,7 @@
                 <div class="cta-buttons-modern">
                     <a href="products.html" class="btn-modern primary">
                         <span class="es-text">Ver Productos</span>
+                        <span class="en-text">View Products</span>
                         <span class="ja-text">商品を見る</span>
                     </a>
                     <a href="contact.html" class="btn-modern outline">
