--- a/contact.html
+++ b/contact.html
@@ -404,6 +404,7 @@
             <div class="contact-container">
                 <h1>
                     <span class="es-text">¡Contáctanos!</span>
+                    <span class="en-text">Contact Us!</span>
                     <span class="ja-text">お問い合わせ</span>
                 </h1>
                 <p>
@@ -420,6 +421,7 @@
                 <div class="contact-form-section">
                     <h2>
                         <span class="es-text">Envíanos un Mensaje</span>
+                        <span class="en-text">Send us a Message</span>
                         <span class="ja-text">メッセージを送る</span>
                     </h2>
                     
@@ -433,6 +435,7 @@
                             <div class="form-group">
                                 <label for="firstName" class="form-label">
                                     <span class="es-text">Nombre</span>
+                                    <span class="en-text">First Name</span>
                                     <span class="ja-text">名前</span>
                                 </label>
                                 <input 
@@ -449,6 +452,7 @@
                             <div class="form-group">
                                 <label for="lastName" class="form-label">
                                     <span class="es-text">Apellido</span>
+                                    <span class="en-text">Last Name</span>
                                     <span class="ja-text">姓</span>
                                 </label>
                                 <input 
@@ -467,6 +471,7 @@
                         <div class="form-group">
                             <label for="email" class="form-label">
                                 <span class="es-text">Correo Electrónico</span>
+                                <span class="en-text">Email</span>
                                 <span class="ja-text">メールアドレス</span>
                             </label>
                             <input 
@@ -484,6 +489,7 @@
                         <div class="form-group">
                             <label for="phone" class="form-label">
                                 <span class="es-text">Teléfono (Opcional)</span>
+                                <span class="en-text">Phone (Optional)</span>
                                 <span class="ja-text">電話番号（オプション）</span>
                             </label>
                             <input 
@@ -500,6 +506,7 @@
                         <div class="form-group">
                             <label for="subject" class="form-label">
                                 <span class="es-text">Asunto</span>
+                                <span class="en-text">Subject</span>
                                 <span class="ja-text">件名</span>
                             </label>
                             <select id="subject" name="subject" class="form-select" required>
@@ -520,6 +527,7 @@
                         <div class="form-group">
                             <label for="message" class="form-label">
                                 <span class="es-text">Mensaje</span>
+                                <span class="en-text">Message</span>
                                 <span class="ja-text">メッセージ</span>
                             </label>
                             <textarea 
@@ -539,6 +547,7 @@
                                 <input type="checkbox" id="newsletter" name="newsletter" class="checkbox-input">
                                 <span class="checkbox-text">
                                     <span class="es-text">Quiero recibir noticias y ofertas especiales por correo</span>
+                                    <span class="en-text">I want to receive news and special offers by email</span>
                                     <span class="ja-text">ニュースや特別オファーをメールで受け取りたい</span>
                                 </span>
                             </label>
@@ -549,6 +558,7 @@
                                 <input type="checkbox" id="privacy" name="privacy" class="checkbox-input" required>
                                 <span class="checkbox-text">
                                     <span class="es-text">Acepto la política de privacidad y términos de servicio</span>
+                                    <span class="en-text">I accept the privacy policy and terms of service</span>
                                     <span class="ja-text">プライバシーポリシーと利用規約に同意します</span>
                                 </span>
                             </label>
@@ -556,6 +566,7 @@
 
                         <button type="submit" class="submit-btn">
                             <span class="es-text">Enviar Mensaje</span>
+                            <span class="en-text">Send Message</span>
                             <span class="ja-text">メッセージを送信</span>
                             <i class="fas fa-paper-plane"></i>
                         </button>
@@ -570,6 +581,7 @@
                         </div>
                         <h3>
                             <span class="es-text">Email</span>
+                            <span class="en-text">Email</span>
                             <span class="ja-text">メール</span>
                         </h3>
                         <p>info@youkoso.com</p>
@@ -582,11 +594,13 @@
                         </div>
                         <h3>
                             <span class="es-text">Teléfono</span>
+                            <span class="en-text">Phone</span>
                             <span class="ja-text">電話</span>
                         </h3>
                         <p>+34 123 456 789</p>
                         <p>
                             <span class="es-text">Lun - Vie: 9:00 - 18:00</span>
+                            <span class="en-text">Mon - Fri: 9:00 - 18:00</span>
                             <span class="ja-text">月〜金: 9:00 - 18:00</span>
                         </p>
                     </div>
@@ -597,10 +611,12 @@
                         </div>
                         <h3>
                             <span class="es-text">Ubicación</span>
+                            <span class="en-text">Location</span>
                             <span class="ja-text">所在地</span>
                         </h3>
                         <p>
                             <span class="es-text">Madrid, España</span>
+                            <span class="en-text">Madrid, Spain</span>
                             <span class="ja-text">マドリード、スペイン</span>
                         </p>
                     </div>
@@ -611,6 +627,7 @@
                         </div>
                         <h3>
                             <span class="es-text">Redes Sociales</span>
+                            <span class="en-text">Social Media</span>
                             <span class="ja-text">ソーシャルメディア</span>
                         </h3>
                         <div style="display: flex; gap: 1rem; margin-top: 1rem;">
