--- a/products.html
+++ b/products.html
@@ -654,6 +654,7 @@
                             <span id="results-count" class="results-count">
                                 <span class="es-text">Cargando productos kawaii...</span>
                                 <span class="ja-text">カワイイ商品を読み込み中...</span>
+                                <span class="en-text">Loading kawaii products...</span>
                             </span>
                         </div>
                         <div class="view-toggle">
@@ -673,6 +674,7 @@
                             <p>
                                 <span class="es-text">Cargando productos kawaii...</span>
                                 <span class="ja-text">カワイイ商品を読み込み中...</span>
+                                <span class="en-text">Loading kawaii products...</span>
                             </p>
                         </div>
                     </div>
@@ -693,11 +695,13 @@
                             <i class="fas fa-filter"></i>
                             <span class="es-text">Filtros</span>
                             <span class="ja-text">フィルター</span>
+                            <span class="en-text">Filters</span>
                         </h2>
                         <button class="filters-reset" id="reset-filters">
                             <i class="fas fa-undo"></i>
                             <span class="es-text">Limpiar</span>
                             <span class="ja-text">クリア</span>
+                            <span class="en-text">Clear</span>
                         </button>
                     </div>
                     
@@ -707,27 +711,33 @@
                                 <i class="fas fa-list"></i>
                                 <span class="es-text">Categoría</span>
                                 <span class="ja-text">カテゴリー</span>
+                                <span class="en-text">Category</span>
                             </label>
                             <select id="category-filter" class="filter-select modern-select">
                                 <option value="all">
                                     <span class="es-text">Todas las categorías</span>
                                     <span class="ja-text">すべてのカテゴリー</span>
+                                    <span class="en-text">All categories</span>
                                 </option>
                                 <option value="figuras">
                                     <span class="es-text">Figuras</span>
                                     <span class="ja-text">フィギュア</span>
+                                    <span class="en-text">Figures</span>
                                 </option>
                                 <option value="peluches">
                                     <span class="es-text">Peluches</span>
                                     <span class="ja-text">ぬいぐるみ</span>
+                                    <span class="en-text">Plushies</span>
                                 </option>
                                 <option value="manga">
                                     <span class="es-text">Manga</span>
                                     <span class="ja-text">マンガ</span>
+                                    <span class="en-text">Manga</span>
                                 </option>
                                 <option value="ropa">
                                     <span class="es-text">Ropa</span>
                                     <span class="ja-text">服</span>
+                                    <span class="en-text">Clothing</span>
                                 </option>
                             </select>
                         </div>
@@ -737,23 +747,28 @@
                                 <i class="fas fa-sort"></i>
                                 <span class="es-text">Ordenar por</span>
                                 <span class="ja-text">並び順</span>
+                                <span class="en-text">Sort by</span>
                             </label>
                             <select id="sort-filter" class="filter-select modern-select">
                                 <option value="featured">
                                     <span class="es-text">Destacados</span>
                                     <span class="ja-text">注目商品</span>
+                                    <span class="en-text">Featured</span>
                                 </option>
                                 <option value="price-low">
                                     <span class="es-text">Precio: Menor a Mayor</span>
                                     <span class="ja-text">価格: 安い順</span>
+                                    <span class="en-text">Price: Low to High</span>
                                 </option>
                                 <option value="price-high">
                                     <span class="es-text">Precio: Mayor a Menor</span>
                                     <span class="ja-text">価格: 高い順</span>
+                                    <span class="en-text">Price: High to Low</span>
                                 </option>
                                 <option value="name">
                                     <span class="es-text">Nombre A-Z</span>
                                     <span class="ja-text">名前順</span>
+                                    <span class="en-text">Name A-Z</span>
                                 </option>
                             </select>
                         </div>
@@ -771,12 +786,14 @@
                         <i class="fas fa-search"></i>
                         <span class="es-text">Buscar Productos</span>
                         <span class="ja-text">商品を検索</span>
+                        <span class="en-text">Search Products</span>
                     </label>
                     <div class="search-wrapper" style="display: flex; gap: 10px;">
                         <input type="text" id="search-input" class="search-input modern-input" 
                                placeholder="Buscar productos kawaii..."
                                data-placeholder-es="Buscar productos kawaii..."
                                data-placeholder-ja="カワイイ商品を検索..."
+                               data-placeholder-en="Search kawaii products..."
                                style="flex: 1; padding: 15px 20px; font-size: 1.1rem; border: 2px solid #ddd; border-radius: 25px;">
                         <button class="search-btn" aria-label="Buscar" style="padding: 15px 25px; background: var(--primary-color); color: white; border: none; border-radius: 25px; cursor: pointer; font-size: 1.1rem;">
                             <i class="fas fa-search"></i>
