--- a/contact.html
+++ b/contact.html
@@ -597,7 +597,7 @@
                             <span class="en-text">Phone</span>
                             <span class="ja-text">電話</span>
                         </h3>
-                        <p>+34 123 456 789</p>
+                        <p>+52 (55) 1234-5678</p>
                         <p>
                             <span class="es-text">Lun - Vie: 9:00 - 18:00</span>
                             <span class="en-text">Mon - Fri: 9:00 - 18:00</span>
@@ -615,9 +615,9 @@
                             <span class="ja-text">所在地</span>
                         </h3>
                         <p>
-                            <span class="es-text">Madrid, España</span>
-                            <span class="en-text">Madrid, Spain</span>
-                            <span class="ja-text">マドリード、スペイン</span>
+                            <span class="es-text">Ciudad de México, México</span>
+                            <span class="en-text">Mexico City, Mexico</span>
+                            <span class="ja-text">メキシコシティ、メキシコ</span>
                         </p>
                     </div>
 
