--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <!-- SEO メタタグ -->
     <title>Youkoso - Tienda Oficial de Productos Japoneses en México | Anime, Manga, Figuras</title>
-    <meta name="description" content="Descubre la mejor tienda de productos japoneses en México. Anime, manga, figuras, peluches y artículos auténticos directos de Japón. Envío gratuito en pedidos de $999 MXN.">
+    <meta name="description" content="Descubre la mejor tienda de productos japoneses en México. Anime, manga, figuras, peluches y artículos auténticos directos de Japón. Envío gratuito en pedidos de más de $999 MXN.">
     <meta name="keywords" content="productos japoneses México, anime México, manga original, figuras anime, peluches Pokémon, Dragon Ball, Demon Slayer, tienda japonesa">
     
     <!-- Open Graph -->
@@ -440,7 +440,6 @@
     <script src="js/main-simple.js?v=2"></script>
     <script src="js/link-checker.js?v=1"></script>
     <script src="js/search-enhanced.js?v=1"></script>
-    <script src="js/filter-enhanced.js?v=1"></script>
     <!-- アクセシビリティ機能無効化 -->
     <!-- <script src="js/accessibility.js?v=1"></script> -->
     <script src="js/mobile-enhanced.js?v=1"></script>
